idea create and template edition

--- a/Idea-war/web/template.xhtml
+++ b/Idea-war/web/template.xhtml
@@ -25,8 +25,10 @@
             
             	        </h:panelGrid>
 	    	</p:fieldset>
+                <h:link outcome="/index" value="#{bundle.CreateIdeaIndexLink}"/>
             </p:panel>
         </p>
+        
     </h:body>
 
 </html>
