create with clasification

--- a/Idea-war/web/pages/idea/Edit.xhtml
+++ b/Idea-war/web/pages/idea/Edit.xhtml
@@ -52,6 +52,9 @@
                                 ajax="false"
 	       			actionListener="#{estadoIdeaController.update}" 
 	       			styleClass="ui-priority-primary" />
+                            
+                        <br />
+                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.ViewIdeaShowAllLink}"/>
 	    	</p:fieldset>
 		</h:form>
         </ui:define>        
