create with clasification

--- a/Idea-war/web/pages/idea/Edit.xhtml
+++ b/Idea-war/web/pages/idea/Edit.xhtml
@@ -50,7 +50,7 @@
                             <p:commandButton value="#{bundle.EditIdeaSaveLink}" id="ajax" 
 	       			update="viewPanel" 
                                 ajax="false"
-	       			actionListener="#{estadoIdeaController.update}" 
+	       			actionListener="#{ideaController.update}" 
 	       			styleClass="ui-priority-primary" />
                             
                         <br />
