--- a/Idea-war/web/pages/idea/List.xhtml
+++ b/Idea-war/web/pages/idea/List.xhtml
@@ -22,12 +22,12 @@
                     <h:commandLink action="#{ideaController.previous}" value="#{bundle.Previous} #{ideaController.pagination.pageSize}" rendered="#{ideaController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{ideaController.next}" value="#{bundle.Next} #{ideaController.pagination.pageSize}" rendered="#{ideaController.pagination.hasNextPage}"/>&nbsp;
                     <h:dataTable value="#{ideaController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
+                        <!--<h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListIdeaTitle_ididea}"/>
                             </f:facet>
                             <h:outputText value="#{item.ididea}"/>
-                        </h:column>
+                        </h:column> -->
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListIdeaTitle_titulo}"/>
@@ -68,7 +68,7 @@
                             <h:outputText value=" "/>
                             <h:commandLink action="#{ideaController.prepareEdit}" value="#{bundle.ListIdeaEditLink}"/>
                             <h:outputText value=" "/>
-                            <h:commandLink action="#{ideaController.destroy}" value="#{bundle.ListIdeaDestroyLink}"/>
+                            <h:commandLink action="#{ideaController.destroy}" value="#{bundle.ListIdeaDestroyLink}" style="display:none"/>
                         </h:column>
                     </h:dataTable>
                 </h:panelGroup>
