Comentar los enlaces fuera del Sprint
Se comenta todos los enlaces de las otras funcionalidades

--- a/Idea-war/web/index.xhtml
+++ b/Idea-war/web/index.xhtml
@@ -23,23 +23,23 @@
                     </p>
 
                     <br />
-                    <h:link outcome="/pages/clasificacion/List" value="Show All Clasificacion Items"/>
+                    <!--<h:link outcome="/pages/clasificacion/List" value="Show All Clasificacion Items"/>
                     <br />
                     <h:link outcome="/pages/comentario/List" value="Show All Comentario Items"/>
                     <br />
                     <h:link outcome="/pages/estadoIdea/List" value="Show All EstadoIdea Items"/>
                     <br />
-                    <h:link outcome="/pages/estadoSubasta/List" value="Show All EstadoSubasta Items"/>
+                    <h:link outcome="/pages/estadoSubasta/List" value="Show All EstadoSubasta Items"/>-->
                     <br />
                     <h:link outcome="/pages/idea/List" value="Show All Idea Items"/>
                     <br />
-                    <h:link outcome="/pages/oferta/List" value="Show All Oferta Items"/>
+                    <!--<h:link outcome="/pages/oferta/List" value="Show All Oferta Items"/>
                     <br />
                     <h:link outcome="/pages/perfil/List" value="Show All Perfil Items"/>
                     <br />
                     <h:link outcome="/pages/usuario/List" value="Show All Usuario Items"/>
                     <br />
-                    <h:link outcome="/pages/venta/List" value="Show All Venta Items"/>
+                    <h:link outcome="/pages/venta/List" value="Show All Venta Items"/>-->
                 </h:panelGrid>
             </p:fieldset>        
         </p:panel>
