--- a/Idea-war/web/pages/idea/View.xhtml
+++ b/Idea-war/web/pages/idea/View.xhtml
@@ -7,21 +7,15 @@
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
+        
         <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <fieldset>
-                <legend>
-                    <h:outputText value="#{bundle.ViewIdeaTitle}" style="font-size: large;"></h:outputText>
-                </legend>
             <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputText value="#{bundle.ViewIdeaLabel_titulo}"/>
-                    <h:outputText value="#{ideaController.selected.titulo}" title="#{bundle.ViewIdeaTitle_titulo}"/>
-                    <h:outputText value="#{bundle.ViewIdeaLabel_descripcion}"/>
-                    <h:outputText value="#{ideaController.selected.descripcion}" title="#{bundle.ViewIdeaTitle_descripcion}"/>            
-                    <h:outputLabel value="#{bundle.CreateIdeaLabel_clasification}" for="clasificacion" />
+                <h:panelGrid columns="2" cellpadding="5">
+                    <p:outputLabel value="#{bundle.ViewIdeaLabel_titulo}"/>
+                    <p:outputLabel value="#{ideaController.selected.titulo}" title="#{bundle.ViewIdeaTitle_titulo}"/>
+                    <p:outputLabel value="#{bundle.ViewIdeaLabel_descripcion}"/>
+                    <p:outputLabel value="#{ideaController.selected.descripcion}" title="#{bundle.ViewIdeaTitle_descripcion}"/>            
+                    <p:outputLabel value="#{bundle.CreateIdeaLabel_clasification}" for="clasification" />
                     <p:selectManyCheckbox id="clasification" value="#{ideaController.selectedClasification}" disabled="true" 
                                                       layout="grid" columns="2">
                                     <f:selectItems value="#{ideaController.selected.clasificacionList}" 
@@ -30,21 +24,12 @@
                     </p:selectManyCheckbox>
                 </h:panelGrid>
                 <br />
-                <h:commandLink action="#{ideaController.destroyAndView}" value="#{bundle.ViewIdeaDestroyLink}" style="display:none"/>
-                <br />
-                <br />
-                <h:link outcome="Edit" value="#{bundle.ViewIdeaEditLink}"/>
-                <br />
-                <h:commandLink action="#{ideaController.prepareCreate}" value="#{bundle.ViewIdeaCreateLink}" />
                 <br />
                 <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.ViewIdeaShowAllLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ViewIdeaIndexLink}"/>
+
 
             </h:form>
-          </fieldset>
-        </ui:define>
+        </ui:define>        
     </ui:composition>
 
 </html>
