--- a/Idea-war/web/template.xhtml
+++ b/Idea-war/web/template.xhtml
@@ -25,7 +25,7 @@
             
             	        </h:panelGrid>
 	    	</p:fieldset>
-                <h:link outcome="/index" value="#{bundle.CreateIdeaIndexLink}"/>
+                <h:link outcome="/index" value="Home"/>
             </p:panel>
         </p>
         
