--- a/Idea-war/web/pages/idea/Create.xhtml
+++ b/Idea-war/web/pages/idea/Create.xhtml
@@ -37,11 +37,15 @@
 		       			ajax="false"
 		       			update="viewPanel" 
 		       			actionListener="#{ideaController.create}" 
-		       			styleClass="ui-priority-primary" />
+                                        styleClass="ui-priority-primary" >
+                                 <f:param name="action_label" value="#{bundle.ListIdeaCreateLenged}" />
+                            </p:commandButton>
                             
                         <br />
                         <br />
-                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.ViewIdeaShowAllLink}" immediate="true"/>    
+                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.ViewIdeaShowAllLink}" immediate="true">
+                            <f:param name="action_label" value="#{bundle.IdeaListLenged}" />
+                        </h:commandLink> 
                         
 		</h:form>
             </ui:define>
