back button label

--- a/Idea-war/web/pages/idea/Create.xhtml
+++ b/Idea-war/web/pages/idea/Create.xhtml
@@ -43,7 +43,7 @@
                             
                         <br />
                         <br />
-                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.ViewIdeaShowAllLink}" immediate="true">
+                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.Back}" immediate="true">
                             <f:param name="action_label" value="#{bundle.IdeaListLenged}" />
                         </h:commandLink> 
                         
