--- a/Idea-war/web/pages/idea/Edit.xhtml
+++ b/Idea-war/web/pages/idea/Edit.xhtml
@@ -43,7 +43,7 @@
                             
                         <br />
                         <br />
-                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.ViewIdeaShowAllLink}">
+                        <h:commandLink action="#{ideaController.prepareList}" value="#{bundle.Back}">
                             <f:param name="action_label" value="#{bundle.IdeaListLenged}" />
                         </h:commandLink>
 		</h:form>
