--- a/Idea-war/web/pages/login/login.xhtml
+++ b/Idea-war/web/pages/login/login.xhtml
@@ -4,13 +4,42 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
+
+    <h:head>
+        <title>Login Page</title>
+    </h:head>
+    <h:body>
+        <f:view>
+            <h:form id="loginForm">
+                <table frame="box">
+                    <tr>
+                        <th>Login Page</th>
+                    </tr>
+                    <tr>
+                        <td> <h:outputText value="Enter Your Name : "/> </td>
+                        <td> <h:inputText id="inputName" value="#{login.nombre}" required="true" 
+                                          requiredMessage="Name field must not be empty"/> </td>
+                        <td><h:message for="inputName" style="color:red"/></td>
+                    </tr>
+                    <tr>
+                        <td> <h:outputText value="Enter password :"/> </td>
+                        <td> <h:inputSecret id="inputPassword" value="#{login.password}" required="true" 
+                                            requiredMessage="Password field must not be empty"/> </td>
+                        <td><h:message for="inputPassword" style="color:red"/></td>
+                    </tr>
+                    <tr>
+                        <td><h:commandButton value="Sign In" action="#{login.login}"/></td>
+                        <td> <h:outputText value="Not a User "/>
+                            <h:outputLink value="register.xhtml">Sign Up</h:outputLink></td>
+                    </tr>
+                </table>
+            </h:form>
+        </f:view>
+    </h:body>
 </html>
