Login - using EJB Data Management - final

--- a/Idea-war/web/pages/idea/List.xhtml
+++ b/Idea-war/web/pages/idea/List.xhtml
@@ -9,6 +9,10 @@
        
         
         <ui:define name="body">
+            <p:outputLabel value="USUARIO: "/>
+            <h:outputText value="#{loginController.current.correo}"></h:outputText>
+            <br />
+            <br />
  
             <h:form styleClass="jsfcrud_list_form">
                 <br/>       
