--- a/Idea-war/web/pages/login/Register.xhtml
+++ b/Idea-war/web/pages/login/Register.xhtml
@@ -17,11 +17,11 @@
                     <h:form>
                         <h:panelGrid columns="2" cellpadding="5">
                             <h:outputLabel value="#{bundle.CreateUsuarioLabel_nombre}" for="nombre" />
-                            <p:inputText  id="nombre" value="#{usuarioController.selected.nombre}" title="#{bundle.CreateUsuarioTitle_nombre}" required="true"/>
+                            <p:inputText  id="nombre" value="#{usuarioController.selected.nombre}" title="#{bundle.CreateUsuarioTitle_nombre}" required="true" requiredMessage="#{bundle.RequiredName}" />
                             <h:outputLabel value="#{bundle.CreateUsuarioLabel_correo}" for="correo" />
-                            <p:inputText  id="correo" value="#{usuarioController.selected.correo}" title="#{bundle.CreateUsuarioTitle_correo}" required="true"/>
+                            <p:inputText  id="correo" value="#{usuarioController.selected.correo}" title="#{bundle.CreateUsuarioTitle_correo}" required="true" requiredMessage="#{bundle.RequiredEmail}" />
                             <h:outputLabel value="#{bundle.CreateUsuarioLabel_password}" for="password" />
-                            <p:password id="password" value="#{usuarioController.selected.password}" title="#{bundle.CreateUsuarioTitle_password}" required="true"/>
+                            <p:password id="password" value="#{usuarioController.selected.password}" title="#{bundle.CreateUsuarioTitle_password}" required="true" requiredMessage="#{bundle.RequiredPassword}"/>
                         </h:panelGrid>
                         <br />
                         <h:panelGrid columns="2">
