--- a/Idea-war/web/pages/login/Register.xhtml
+++ b/Idea-war/web/pages/login/Register.xhtml
@@ -16,17 +16,29 @@
                 <p:messages id="msgs" />
                     <h:form>
                         <h:panelGrid columns="2" cellpadding="5">
-                            <h:outputLabel value="#{bundle.CreateUsuarioLabel_nombre}" for="nombre" />
+                            <p:outputLabel value="#{bundle.CreateUsuarioLabel_nombre}" for="nombre" />
                             <p:inputText  id="nombre" value="#{usuarioController.selected.nombre}" title="#{bundle.CreateUsuarioTitle_nombre}" required="true" requiredMessage="#{bundle.RequiredName}" />
-                            <h:outputLabel value="#{bundle.CreateUsuarioLabel_correo}" for="correo" />
-                            <p:inputText  id="correo" value="#{usuarioController.selected.correo}" title="#{bundle.CreateUsuarioTitle_correo}" required="true" requiredMessage="#{bundle.RequiredEmail}" />
-                            <h:outputLabel value="#{bundle.CreateUsuarioLabel_password}" for="password" />
-                            <p:password id="password" value="#{usuarioController.selected.password}" title="#{bundle.CreateUsuarioTitle_password}" required="true" requiredMessage="#{bundle.RequiredPassword}"/>
+                            <p:outputLabel value="#{bundle.CreateUsuarioLabel_correo}" for="correo" />
+                            <p:inputText  id="correo" value="#{usuarioController.selected.correo}" title="#{bundle.CreateUsuarioTitle_correo}" required="true" requiredMessage="#{bundle.RequiredEmail}" validatorMessage="#{bundle.EmailValidation}" >
+                                <f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+                            </p:inputText>
+                            <p:outputLabel value="#{bundle.CreateUsuarioLabel_password}" for="password" />
+                            <p:password id="password" value="#{usuarioController.selected.password}" title="#{bundle.CreateUsuarioTitle_password}" required="true" requiredMessage="#{bundle.RequiredPassword}" validatorMessage="#{bundle.PasswordValidation}" >
+                                <f:validateRegex pattern="^.*(?=.{6,10})(?=.*[a-zA-Z])(?=.*\d)[a-zA-Z0-9!@#$%]+$" />
+                            </p:password>
                         </h:panelGrid>
                         <br />
                         <h:panelGrid columns="2">
-                            <h:commandButton action="#{usuarioController.create}" value="Save"/>
-                            <h:commandButton value="Cancel" action="Login.xhtml" immediate="true"/>
+                            <p:commandButton action="#{usuarioController.create}" value="Save"/>
+                            <p:commandButton value="Cancel" action="Login.xhtml" immediate="true"/>
+                        </h:panelGrid>
+                        <h:panelGrid columns="2" cellpadding="5">
+                            <p>Instructions</p>
+                            <ul>
+                                <li>Email should have the format “name@domain”.</li>
+                                <li>Password must contain 6-10 characters, at least one alpha and one number.</li>
+                                <li>The following special characters are allowed (0 or more): !@#$%</li>
+                            </ul>
                         </h:panelGrid>
                     </h:form>
                 </p:fieldset>
