--- a/Idea-war/web/pages/login/Login.xhtml
+++ b/Idea-war/web/pages/login/Login.xhtml
@@ -17,15 +17,31 @@
                 <h:form>
                     <h:panelGrid columns="2"> 
                    
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_correo}" for="correo" />
-                    <h:inputText id="correo" value="#{loginController.email}" title="#{bundle.CreateUsuarioTitle_correo}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_password}" for="password" />
-                    <h:inputSecret id="password" value="#{loginController.password}" title="#{bundle.CreateUsuarioTitle_password}" required="true" requiredMessage="#{bundle.RequiredPassword}"/>
+                        <p:outputLabel value="#{bundle.CreateUsuarioLabel_correo}" for="correo" />
+                        <p:inputText id="correo" 
+                                     value="#{loginController.email}" 
+                                     title="#{bundle.CreateUsuarioTitle_correo}" 
+                                     validatorMessage="#{bundle.EmailValidation}" 
+                                     required="true"> 
+                            <f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+                        </p:inputText>
+                        <p:outputLabel value="#{bundle.CreateUsuarioLabel_password}" 
+                                       for="password" />
+                        <p:password id="password" 
+                                    value="#{loginController.password}" 
+                                    title="#{bundle.CreateUsuarioTitle_password}" 
+                                    required="true" 
+                                    requiredMessage="#{bundle.RequiredPassword}"/>
                     </h:panelGrid>
-                    <br />
+                    <span>* Required fields</span>
+                        <br />
+                        <br />
                     <h:panelGrid columns="2">
-                        <h:commandButton action="#{loginController.login}" value="Sign in"/>
-                        <h:commandButton value="Cancel"/>
+                        <p:commandButton action="#{loginController.login}" 
+                                         value="Sign in"
+                                         ajax="false"/>
+                        <p:commandButton value="Cancel"
+                                         ajax="false"/>
                         <h:outputText value="Not a user" />
                         <h:commandLink value="Sign Up" action="Register.xhtml" immediate="true"/>
                     </h:panelGrid>                   
