edit page fixed

--- a/Idea-war/web/pages/idea/Edit.xhtml
+++ b/Idea-war/web/pages/idea/Edit.xhtml
@@ -24,7 +24,7 @@
                                 <p:inputTextarea rows="4" cols="30" id="titulo" value="#{ideaController.selected.titulo}" title="#{bundle.CreateIdeaTitle_titulo}" required="true" requiredMessage="#{bundle.CreateIdeaTitle_required}" />
                                 <p:outputLabel value="#{bundle.CreateIdeaLabel_descripcion}" for="descripcion" />
                                 <p:inputTextarea rows="4" cols="30" id="descripcion" value="#{ideaController.selected.descripcion}" title="#{bundle.CreateIdeaTitle_descripcion}" /> 
-                                <p:outputLabel value="#{bundle.CreateIdeaLabel_clasification}" for="clasificacion" />
+                                <p:outputLabel value="#{bundle.CreateIdeaLabel_clasification}" for="clasification" />
                                 <p:selectManyCheckbox id="clasification" value="#{ideaController.selectedClasification}" 
                                                       layout="grid" columns="2"
                                                       required="true" requiredMessage="#{bundle.NoClasificationSelected}" >
