Create Idea - insert idUsuario and idEstadoIdea. CREATE.XHTML have EstadoIdea selection Login.XHTML - instert icons in button, adjust buttons Register.XHTML - instert icons in button

--- a/Idea-war/web/pages/login/Login.xhtml
+++ b/Idea-war/web/pages/login/Login.xhtml
@@ -39,11 +39,9 @@
                     <h:panelGrid columns="2">
                         <p:commandButton action="#{loginController.login}" 
                                          value="Sign in"
-                                         ajax="false"/>
-                        <p:commandButton value="Cancel"
-                                         ajax="false"/>
-                        <h:outputText value="Not a user" />
-                        <h:commandLink value="Sign Up" action="Register.xhtml" immediate="true"/>
+                                         ajax="false"
+                                         icon="ui-icon-check"/>
+                        <p:commandButton value="Register" action="Register.xhtml" immediate="true" icon="ui-icon-star"/>
                     </h:panelGrid>                   
                 </h:form>
             	</p:fieldset>
