--- a/Idea-war/web/pages/login/Register.xhtml
+++ b/Idea-war/web/pages/login/Register.xhtml
@@ -33,11 +33,13 @@
                         <h:panelGrid columns="2">
                             <p:commandButton action="#{usuarioController.create}" 
                                              value="Save"
-                                             ajax="false"/>
+                                             ajax="false"
+                                             icon="ui-icon-check"/>
                             <p:commandButton value="Cancel" 
                                              action="Login.xhtml" 
                                              immediate="true"
-                                             ajax="false" />
+                                             ajax="false" 
+                                             icon="ui-icon-cancel"/>
                         </h:panelGrid>
                         
                         <h:panelGrid columns="2" cellpadding="5">
